# todo-project-assignment

./: README.md  database.db  pyproject.toml
main/: app.py  create_table.py  database.db
main/api/: routes.py
main/models/: user.py
